<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>

    <groupId>com.example</groupId>
    <artifactId>cytoscape-graph-viewer</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>cytoscape-graph-viewer</name>
    <description>RAP-Browser-Widget zur Visualisierung von Graphen mit Cytoscape (fcose) und vis-network.</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <rap.version>4.4.0</rap.version>
        <gson.version>2.11.0</gson.version>
    </properties>

    <repositories>
        <repository>
            <id>eclipse-rap</id>
            <url>https://repo.eclipse.org/content/repositories/rap-releases/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!--
          GraalVM JS engine for the Cytoscape viewer end-to-end test. We
          host the real cytoscape-viewer.js source inside a GraalJS
          engine with a mocked window/DOM/cytoscape so we can verify
          that the Java CytoscapeJsBridge.applyData() → JavaScript
          cgv_setData() → applyElements() → cy.add() pipeline actually
          carries the graph data through to the Cytoscape instance.
          Without this test the "autoLoadFallback disabled" regression
          could ship unnoticed — a Java→JS ordering bug would silently
          drop the elements array and the user would see an empty
          canvas.

          Note: the graal-js artifact lives under
          {@code org.graalvm.js:js-language} (the {@code org.graalvm.js:js}
          POM is a meta-package with no JAR). js-language pulls in
          GraalVM polyglot, the JS engine itself, and the standard JS
          library.
        -->
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js-language</artifactId>
            <version>24.1.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rap</groupId>
            <artifactId>org.eclipse.rap.rwt</artifactId>
            <version>${rap.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rap</groupId>
            <artifactId>org.eclipse.rap.filedialog</artifactId>
            <version>${rap.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
